--- a/webRTC_Backend/build.gradle
+++ b/webRTC_Backend/build.gradle
@@ -21,6 +21,10 @@ configurations {
 
 repositories {
     mavenCentral()
+    // Kurento 저장소 추가
+    maven {
+        url "https://maven.openvidu.io/"
+    }
 }
 
 dependencies {
@@ -30,7 +34,16 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+
     implementation 'com.fasterxml.jackson.core:jackson-databind'
+
+    // Kurento 클라이언트 추가
+    implementation 'org.kurento:kurento-client:6.18.0'
+    implementation 'org.kurento:kurento-utils-js:6.18.0'
+
+    // Gson 의존성 추가 (Kurento가 사용)
+    implementation 'com.google.code.gson:gson:2.10.1'
 }
 
 tasks.named('test') {
